// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMediaQueries should return properly 1`] = `
{
  "lg": "@media screen and (min-width: 1024px)",
  "md": "@media screen and (min-width: 768px)",
  "sm": "@media screen and (min-width: 400px)",
  "xl": "@media screen and (min-width: 1280px)",
  "xs": "@media screen and (min-width: 375px)",
  "xxl": "@media screen and (min-width: 1440px)",
  "xxs": "@media screen and (min-width: 320px)",
  "xxxl": "@media screen and (min-width: 1680px)",
}
`;

exports[`getTheme should return the theme 1`] = `
{
  "black": "#000",
  "breakpoints": {
    "lg": "1024px",
    "md": "768px",
    "sm": "400px",
    "xl": "1280px",
    "xs": "375px",
    "xxl": "1440px",
    "xxs": "320px",
    "xxxl": "1680px",
  },
  "button": {
    "borderRadius": {
      "lg": "8px",
      "md": "8px",
      "sm": "8px",
    },
    "fontSize": {
      "lg": "18px",
      "md": "16px",
      "sm": "14px",
    },
    "fontWeight": 700,
    "height": {
      "lg": "48px",
      "md": "40px",
      "sm": "32px",
    },
    "lineHeight": {
      "lg": 1.4,
      "md": 1.3,
      "sm": 1.2,
    },
    "padding": {
      "lg": [
        "10px",
        "20px",
      ],
      "md": [
        "8px",
        "16px",
      ],
      "sm": [
        "6px",
        "12px",
      ],
    },
  },
  "colors": {
    "blue": "#66a5ff",
    "green": "#58d063",
    "orange": "#ff995d",
    "pink": "#ee63ab",
    "primary": "#3030e8",
    "purple": "#ad7bff",
    "red": "#ff5e5e",
    "secondary": "#2A5D65",
    "yellow": "#ffe166",
  },
  "darkColor": "#101010",
  "dropShadow": {
    "high": "drop-shadow(2px 4px 18px rgba(148, 148, 148, 0.8))",
    "low": "drop-shadow(2px 4px 8px rgba(148, 148, 148, 0.4))",
    "mid": "drop-shadow(2px 4px 12px rgba(148, 148, 148, 0.6))",
  },
  "easing": "cubic-bezier(0.35, 0.01, 0.77, 0.34);",
  "fontFamily": "inherit",
  "fontMonospace": "Courier, monospace",
  "fontWeights": {
    "bold": 700,
    "normal": 400,
  },
  "gray": "#808080",
  "grayDark": "#484848",
  "grayDarker": "#242424",
  "grayDarkest": "#101010",
  "grayLight": "#c0c0c0",
  "grayLighter": "#e0e0e0",
  "grayLightest": "#f5f5f5",
  "grayMid": "#767676",
  "grayScale": {
    "1": "#fcfcfc",
    "10": "#e6e6e6",
    "15": "#d9d9d9",
    "2": "#fafafa",
    "20": "#cccccc",
    "3": "#f7f7f7",
    "30": "#b3b3b3",
    "4": "#f5f5f5",
    "40": "#999999",
    "5": "#f2f2f2",
    "50": "#808080",
    "60": "#666666",
    "70": "#4d4d4d",
    "80": "#333333",
    "90": "#1a1a1a",
    "95": "#0d0d0d",
  },
  "inputHeight": {
    "large": "48px",
    "normal": "40px",
  },
  "lightColor": "#f5f5f5",
  "opacity": {
    "intense": 0.64,
    "light": 0.16,
    "medium": 0.32,
    "semiOpaque": 0.72,
    "semiTransparent": 0.08,
  },
  "radius": {
    "lg": "24px",
    "md": "16px",
    "round": "50%",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxs": "4px",
  },
  "shadow": {
    "high": "2px 4px 16px 8px rgba(148, 148, 148, 0.32)",
    "low": "2px 4px 16px 2px rgba(148, 148, 148, 0.16)",
    "mid": "2px 4px 16px 4px rgba(148, 148, 148, 0.24)",
  },
  "spacing": {
    "jumbo": "96px",
    "lg": "24px",
    "md": "16px",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxl": "48px",
    "xxs": "4px",
    "xxxl": "64px",
  },
  "typography": {
    "h1": {
      "fontSize": "32px",
      "lineHeight": 1.2,
    },
    "h2": {
      "fontSize": "28px",
      "lineHeight": 1.2,
    },
    "h3": {
      "fontSize": "24px",
      "lineHeight": 1.2,
    },
    "h4": {
      "fontSize": "20px",
      "lineHeight": 1.2,
    },
    "h5": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "h6": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "jumbo": {
      "fontSize": "48px",
      "lineHeight": 1.2,
    },
    "jumboLarge": {
      "fontSize": "64px",
      "lineHeight": 1.2,
    },
    "large": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "mid": {
      "fontSize": "14px",
      "lineHeight": 1.2,
    },
    "regular": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "small": {
      "fontSize": "12px",
      "lineHeight": 1.2,
    },
  },
  "variants": {
    "blue": {
      "dark": {
        "bg": "#0067fa",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#0042a1",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#002c6b",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#99c3ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#d6e7ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ebf3ff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#66a5ff",
        "color": "#000000",
      },
    },
    "gray": {
      "dark": {
        "bg": "#484848",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#242424",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#101010",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c0c0c0",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e0e0e0",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f5f5f5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#808080",
        "color": "#000000",
      },
    },
    "green": {
      "dark": {
        "bg": "#2ea238",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#1d6824",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#144518",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#afe9b5",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#dff6e1",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#effbf0",
        "color": "#000000",
      },
      "mid": {
        "bg": "#58d063",
        "color": "#000000",
      },
    },
    "orange": {
      "dark": {
        "bg": "#f45a00",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d3a00",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#682700",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffbf99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffe5d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fff2eb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff995d",
        "color": "#000000",
      },
    },
    "pink": {
      "dark": {
        "bg": "#d51779",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#890f4e",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#5b0a34",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#f5a3cd",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fbdaeb",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fdedf5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ee63ab",
        "color": "#000000",
      },
    },
    "primary": {
      "dark": {
        "bg": "#1414b0",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#0d0d71",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#08084c",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#9595f3",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#c7c7f9",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ededfd",
        "color": "#000000",
      },
      "mid": {
        "bg": "#3030e8",
        "color": "#ffffff",
      },
    },
    "purple": {
      "dark": {
        "bg": "#670aff",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#4000aa",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#2b0071",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c099ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e6d6ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f2ebff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ad7bff",
        "color": "#000000",
      },
    },
    "red": {
      "dark": {
        "bg": "#f40000",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d0000",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#690000",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ff9999",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffd6d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ffebeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff5e5e",
        "color": "#000000",
      },
    },
    "secondary": {
      "dark": {
        "bg": "#306a73",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#18353a",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#0d1c1e",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#7dbfc9",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#bedfe4",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#e2f1f3",
        "color": "#000000",
      },
      "mid": {
        "bg": "#2A5D65",
        "color": "#ffffff",
      },
    },
    "yellow": {
      "dark": {
        "bg": "#fac900",
        "color": "#000000",
      },
      "darker": {
        "bg": "#a18100",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#6b5600",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffeb99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fff7d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fffbeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ffe166",
        "color": "#000000",
      },
    },
  },
  "white": "#fff",
}
`;

exports[`mergeTheme should return a modified theme 1`] = `
{
  "black": "#000",
  "breakpoints": {
    "lg": "1024px",
    "md": "768px",
    "sm": "100px",
    "xl": "1280px",
    "xs": "375px",
    "xxl": "1440px",
    "xxs": "320px",
    "xxxl": "1680px",
  },
  "button": {
    "borderRadius": {
      "lg": "8px",
      "md": "8px",
      "sm": "8px",
    },
    "fontSize": {
      "lg": "18px",
      "md": "16px",
      "sm": "14px",
    },
    "fontWeight": 700,
    "height": {
      "lg": "48px",
      "md": "40px",
      "sm": "32px",
    },
    "lineHeight": {
      "lg": 1.4,
      "md": 1.3,
      "sm": 1.2,
    },
    "padding": {
      "lg": [
        "10px",
        "20px",
      ],
      "md": [
        "8px",
        "16px",
      ],
      "sm": [
        "6px",
        "12px",
      ],
    },
  },
  "colors": {
    "blue": "#66a5ff",
    "green": "#58d063",
    "orange": "#ff995d",
    "pink": "#ee63ab",
    "primary": "#f04",
    "purple": "#ad7bff",
    "red": "#ff5e5e",
    "secondary": "#2A5D65",
    "yellow": "#ffe166",
  },
  "darkColor": "#f04",
  "dropShadow": {
    "high": "drop-shadow(2px 4px 18px rgba(148, 148, 148, 0.8))",
    "low": "drop-shadow(2px 4px 8px rgba(148, 148, 148, 0.4))",
    "mid": "drop-shadow(2px 4px 12px rgba(148, 148, 148, 0.6))",
  },
  "easing": "cubic-bezier(0.35, 0.01, 0.77, 0.34);",
  "fontFamily": "inherit",
  "fontMonospace": "Courier, monospace",
  "fontWeights": {
    "bold": 600,
    "normal": 300,
  },
  "gray": "#808080",
  "grayDark": "#484848",
  "grayDarker": "#242424",
  "grayDarkest": "#101010",
  "grayLight": "#c0c0c0",
  "grayLighter": "#e0e0e0",
  "grayLightest": "#f5f5f5",
  "grayMid": "#767676",
  "grayScale": {
    "1": "#fcfcfc",
    "10": "#e6e6e6",
    "15": "#d9d9d9",
    "2": "#fafafa",
    "20": "#cccccc",
    "3": "#f7f7f7",
    "30": "#b3b3b3",
    "4": "#f5f5f5",
    "40": "#999999",
    "5": "#f2f2f2",
    "50": "#808080",
    "60": "#666666",
    "70": "#4d4d4d",
    "80": "#333333",
    "90": "#1a1a1a",
    "95": "#0d0d0d",
  },
  "inputHeight": {
    "large": "48px",
    "normal": "40px",
  },
  "lightColor": "#f5f5f5",
  "opacity": {
    "intense": 0.64,
    "light": 0.16,
    "medium": 0.32,
    "semiOpaque": 0.72,
    "semiTransparent": 0.08,
  },
  "radius": {
    "lg": "24px",
    "md": "16px",
    "round": "50%",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxs": "4px",
  },
  "shadow": {
    "high": "2px 4px 16px 8px rgba(148, 148, 148, 0.32)",
    "low": "2px 4px 16px 2px rgba(148, 148, 148, 0.16)",
    "mid": "2px 4px 16px 4px rgba(148, 148, 148, 0.24)",
  },
  "spacing": {
    "jumbo": "96px",
    "lg": "24px",
    "md": "16px",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxl": "48px",
    "xxs": "4px",
    "xxxl": "64px",
  },
  "typography": {
    "h1": {
      "fontSize": "32px",
      "lineHeight": 1.2,
    },
    "h2": {
      "fontSize": "28px",
      "lineHeight": 1.2,
    },
    "h3": {
      "fontSize": "24px",
      "lineHeight": 1.2,
    },
    "h4": {
      "fontSize": "20px",
      "lineHeight": 1.2,
    },
    "h5": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "h6": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "jumbo": {
      "fontSize": "48px",
      "lineHeight": 1.2,
    },
    "jumboLarge": {
      "fontSize": "64px",
      "lineHeight": 1.2,
    },
    "large": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "mid": {
      "fontSize": "14px",
      "lineHeight": 1.2,
    },
    "regular": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "small": {
      "fontSize": "12px",
      "lineHeight": 1.2,
    },
  },
  "variants": {
    "blue": {
      "dark": {
        "bg": "#0067fa",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#0042a1",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#002c6b",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#99c3ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#d6e7ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ebf3ff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#66a5ff",
        "color": "#000000",
      },
    },
    "gray": {
      "dark": {
        "bg": "#484848",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#242424",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#101010",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c0c0c0",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e0e0e0",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f5f5f5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#808080",
        "color": "#000000",
      },
    },
    "green": {
      "dark": {
        "bg": "#2ea238",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#1d6824",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#144518",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#afe9b5",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#dff6e1",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#effbf0",
        "color": "#000000",
      },
      "mid": {
        "bg": "#58d063",
        "color": "#000000",
      },
    },
    "orange": {
      "dark": {
        "bg": "#f45a00",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d3a00",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#682700",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffbf99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffe5d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fff2eb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff995d",
        "color": "#000000",
      },
    },
    "pink": {
      "dark": {
        "bg": "#d51779",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#890f4e",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#5b0a34",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#f5a3cd",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fbdaeb",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fdedf5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ee63ab",
        "color": "#000000",
      },
    },
    "primary": {
      "dark": {
        "bg": "#b30030",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#73001f",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#4d0014",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ff668f",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffa3bc",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ffe6ec",
        "color": "#000000",
      },
      "mid": {
        "bg": "#f04",
        "color": "#ffffff",
      },
    },
    "purple": {
      "dark": {
        "bg": "#670aff",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#4000aa",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#2b0071",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c099ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e6d6ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f2ebff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ad7bff",
        "color": "#000000",
      },
    },
    "red": {
      "dark": {
        "bg": "#f40000",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d0000",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#690000",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ff9999",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffd6d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ffebeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff5e5e",
        "color": "#000000",
      },
    },
    "secondary": {
      "dark": {
        "bg": "#306a73",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#18353a",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#0d1c1e",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#7dbfc9",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#bedfe4",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#e2f1f3",
        "color": "#000000",
      },
      "mid": {
        "bg": "#2A5D65",
        "color": "#ffffff",
      },
    },
    "yellow": {
      "dark": {
        "bg": "#fac900",
        "color": "#000000",
      },
      "darker": {
        "bg": "#a18100",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#6b5600",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffeb99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fff7d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fffbeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ffe166",
        "color": "#000000",
      },
    },
  },
  "white": "#fff",
}
`;

exports[`mergeTheme should return the default theme 1`] = `
{
  "black": "#000",
  "breakpoints": {
    "lg": "1024px",
    "md": "768px",
    "sm": "400px",
    "xl": "1280px",
    "xs": "375px",
    "xxl": "1440px",
    "xxs": "320px",
    "xxxl": "1680px",
  },
  "button": {
    "borderRadius": {
      "lg": "8px",
      "md": "8px",
      "sm": "8px",
    },
    "fontSize": {
      "lg": "18px",
      "md": "16px",
      "sm": "14px",
    },
    "fontWeight": 700,
    "height": {
      "lg": "48px",
      "md": "40px",
      "sm": "32px",
    },
    "lineHeight": {
      "lg": 1.4,
      "md": 1.3,
      "sm": 1.2,
    },
    "padding": {
      "lg": [
        "10px",
        "20px",
      ],
      "md": [
        "8px",
        "16px",
      ],
      "sm": [
        "6px",
        "12px",
      ],
    },
  },
  "colors": {
    "blue": "#66a5ff",
    "green": "#58d063",
    "orange": "#ff995d",
    "pink": "#ee63ab",
    "primary": "#3030e8",
    "purple": "#ad7bff",
    "red": "#ff5e5e",
    "secondary": "#2A5D65",
    "yellow": "#ffe166",
  },
  "darkColor": "#101010",
  "dropShadow": {
    "high": "drop-shadow(2px 4px 18px rgba(148, 148, 148, 0.8))",
    "low": "drop-shadow(2px 4px 8px rgba(148, 148, 148, 0.4))",
    "mid": "drop-shadow(2px 4px 12px rgba(148, 148, 148, 0.6))",
  },
  "easing": "cubic-bezier(0.35, 0.01, 0.77, 0.34);",
  "fontFamily": "inherit",
  "fontMonospace": "Courier, monospace",
  "fontWeights": {
    "bold": 700,
    "normal": 400,
  },
  "gray": "#808080",
  "grayDark": "#484848",
  "grayDarker": "#242424",
  "grayDarkest": "#101010",
  "grayLight": "#c0c0c0",
  "grayLighter": "#e0e0e0",
  "grayLightest": "#f5f5f5",
  "grayMid": "#767676",
  "grayScale": {
    "1": "#fcfcfc",
    "10": "#e6e6e6",
    "15": "#d9d9d9",
    "2": "#fafafa",
    "20": "#cccccc",
    "3": "#f7f7f7",
    "30": "#b3b3b3",
    "4": "#f5f5f5",
    "40": "#999999",
    "5": "#f2f2f2",
    "50": "#808080",
    "60": "#666666",
    "70": "#4d4d4d",
    "80": "#333333",
    "90": "#1a1a1a",
    "95": "#0d0d0d",
  },
  "inputHeight": {
    "large": "48px",
    "normal": "40px",
  },
  "lightColor": "#f5f5f5",
  "opacity": {
    "intense": 0.64,
    "light": 0.16,
    "medium": 0.32,
    "semiOpaque": 0.72,
    "semiTransparent": 0.08,
  },
  "radius": {
    "lg": "24px",
    "md": "16px",
    "round": "50%",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxs": "4px",
  },
  "shadow": {
    "high": "2px 4px 16px 8px rgba(148, 148, 148, 0.32)",
    "low": "2px 4px 16px 2px rgba(148, 148, 148, 0.16)",
    "mid": "2px 4px 16px 4px rgba(148, 148, 148, 0.24)",
  },
  "spacing": {
    "jumbo": "96px",
    "lg": "24px",
    "md": "16px",
    "sm": "12px",
    "xl": "32px",
    "xs": "8px",
    "xxl": "48px",
    "xxs": "4px",
    "xxxl": "64px",
  },
  "typography": {
    "h1": {
      "fontSize": "32px",
      "lineHeight": 1.2,
    },
    "h2": {
      "fontSize": "28px",
      "lineHeight": 1.2,
    },
    "h3": {
      "fontSize": "24px",
      "lineHeight": 1.2,
    },
    "h4": {
      "fontSize": "20px",
      "lineHeight": 1.2,
    },
    "h5": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "h6": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "jumbo": {
      "fontSize": "48px",
      "lineHeight": 1.2,
    },
    "jumboLarge": {
      "fontSize": "64px",
      "lineHeight": 1.2,
    },
    "large": {
      "fontSize": "18px",
      "lineHeight": 1.2,
    },
    "mid": {
      "fontSize": "14px",
      "lineHeight": 1.2,
    },
    "regular": {
      "fontSize": "16px",
      "lineHeight": 1.2,
    },
    "small": {
      "fontSize": "12px",
      "lineHeight": 1.2,
    },
  },
  "variants": {
    "blue": {
      "dark": {
        "bg": "#0067fa",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#0042a1",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#002c6b",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#99c3ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#d6e7ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ebf3ff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#66a5ff",
        "color": "#000000",
      },
    },
    "gray": {
      "dark": {
        "bg": "#484848",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#242424",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#101010",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c0c0c0",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e0e0e0",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f5f5f5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#808080",
        "color": "#000000",
      },
    },
    "green": {
      "dark": {
        "bg": "#2ea238",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#1d6824",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#144518",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#afe9b5",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#dff6e1",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#effbf0",
        "color": "#000000",
      },
      "mid": {
        "bg": "#58d063",
        "color": "#000000",
      },
    },
    "orange": {
      "dark": {
        "bg": "#f45a00",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d3a00",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#682700",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffbf99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffe5d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fff2eb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff995d",
        "color": "#000000",
      },
    },
    "pink": {
      "dark": {
        "bg": "#d51779",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#890f4e",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#5b0a34",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#f5a3cd",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fbdaeb",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fdedf5",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ee63ab",
        "color": "#000000",
      },
    },
    "primary": {
      "dark": {
        "bg": "#1414b0",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#0d0d71",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#08084c",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#9595f3",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#c7c7f9",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ededfd",
        "color": "#000000",
      },
      "mid": {
        "bg": "#3030e8",
        "color": "#ffffff",
      },
    },
    "purple": {
      "dark": {
        "bg": "#670aff",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#4000aa",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#2b0071",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#c099ff",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#e6d6ff",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#f2ebff",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ad7bff",
        "color": "#000000",
      },
    },
    "red": {
      "dark": {
        "bg": "#f40000",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#9d0000",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#690000",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ff9999",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#ffd6d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#ffebeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ff5e5e",
        "color": "#000000",
      },
    },
    "secondary": {
      "dark": {
        "bg": "#306a73",
        "color": "#ffffff",
      },
      "darker": {
        "bg": "#18353a",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#0d1c1e",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#7dbfc9",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#bedfe4",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#e2f1f3",
        "color": "#000000",
      },
      "mid": {
        "bg": "#2A5D65",
        "color": "#ffffff",
      },
    },
    "yellow": {
      "dark": {
        "bg": "#fac900",
        "color": "#000000",
      },
      "darker": {
        "bg": "#a18100",
        "color": "#ffffff",
      },
      "darkest": {
        "bg": "#6b5600",
        "color": "#ffffff",
      },
      "light": {
        "bg": "#ffeb99",
        "color": "#000000",
      },
      "lighter": {
        "bg": "#fff7d6",
        "color": "#000000",
      },
      "lightest": {
        "bg": "#fffbeb",
        "color": "#000000",
      },
      "mid": {
        "bg": "#ffe166",
        "color": "#000000",
      },
    },
  },
  "white": "#fff",
}
`;

exports[`responsive should return proper styles 1`] = `"width:120px;@media screen and (min-width: 768px){width:200px;}"`;
